--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site settings
-title: Creative Theme
-email: theme@viennalabs.com
+title: Shiftwp | Lead Generation Company
+email: harperkain@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
- Creative is a one page Bootstrap theme for creatives, small businesses, and other multipurpose uses.
- The theme includes a number of rich features and plugins that you can use as a great boilerplate for your next Jekyll project!
+ For lead generator services that convert, contact The Lead Generation Company. We are the number 1 company in US for generating business leads.
 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
